--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" /><button onclick="sendYoutube()">Send</button>
     </form>
   </body>
 </html>
