Load up youtube embedder

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+
+    <div id="player"></div>
   </body>
 </html>
