Got the ranking to work up and down

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="wrapper">
       <div id="player"></div>
       <div class="vote_controls">
-	<button id="awesomeBtn">Awesome!</button>
-	<button id="lameBtn">Lameee</button>
+	<button id="awesomeBtn" onclick="increaseRanking()">Awesome!</button>
+	<button id="lameBtn" onclick="decreaseRanking()">Lameee</button>
       </div>
       <div class="queue_controls">
 	<input id="m" autocomplete="off" placeholder="http://youtube.com/watch" />
